<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:fontFamily="@font/calculator"
        app:layout_constraintBottom_toTopOf="@+id/row_1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_ans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|end"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:fontFamily="@font/calculator"
        app:layout_constraintTop_toBottomOf="@id/input_text" />

    <LinearLayout
        android:id="@+id/row_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/row_2">

        <Button
            android:id="@+id/btn_num1"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:onClick="onClickNumber"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_num2"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:onClick="onClickNumber"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_num3"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:onClick="onClickNumber"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/operator_plus"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:onClick="onClickOperator"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/row_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@id/row_3">

        <Button

            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:onClick="onClickNumber"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:onClick="onClickNumber"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:onClick="onClickNumber"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:onClick="onClickOperator"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/row_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@id/row_4"
        >

        <Button

            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:onClick="onClickNumber"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:onClick="onClickNumber"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button

            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:onClick="onClickNumber"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:onClick="onClickOperator"
            android:text="@string/multiple"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/row_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@id/row_5">

        <Button

            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:onClick="onClickNumber"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:onClick="onClickNumber"
            android:text="@string/full_stop"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <Button

            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:onClick="onClickOperator"
            android:text="@string/power"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:onClick="onClickOperator"
            android:text="@string/division"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/row_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintEnd_toStartOf="@id/layout_equal"
        app:layout_constraintBottom_toTopOf="@id/row_6">

        <Button

            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:onClick="onClickNumber"
            android:text="@string/open_braket"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:onClick="onClickNumber"
            android:text="@string/close_braket"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button

            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:onClick="onClickOperator"
            android:text="@string/percent"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/row_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toStartOf="@id/layout_equal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button

            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/answer"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:onClick="onClickACBtn"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/all_clear"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button

            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:onClick="onClickDeleteBtn"
            android:gravity="center"
            android:text="@string/delete"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_equal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/row_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/row_5">

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:onClick="onClickEqualBtn"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:textSize="50sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>